--- a/demo1calc/index.html
+++ b/demo1calc/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calc</title>
     <link rel="stylesheet" href="style.css" >
-    <script type="text/javascript" src="index.js" defer></script>
+    <script type="text/javascript" src="script.js" defer></script>
 </head>
 <body>
     <h1 class="calccss" id="h1">calc (short for CALCULATOR)<img id="nerd" src="https://png.pngtree.com/png-vector/20230909/ourmid/pngtree-nerdy-emoticon-shy-png-image_9222542.png" alt="you rn"></h1>
