--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
    
     <p class="calccss" id="outro">
         note: use brackets when computing negative values, ** for exponents, and also dont be stupid <img id="dance" src="https://i.pinimg.com/originals/ce/c0/1d/cec01d7f0daca356b1d991a3f8aa40c2.gif">
-        <br>pending: custom output for 0/0, expanding calc when display is too long
+        <br>pending: nan, expanding calc when display is too long
         </p>
 
 
