--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
         <br>pending: nan, expanding calc when display is too long
         </p>
 
+    <p><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1NHflT1W5O7fntEXN9rfe9?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></p>
+
 
 
 </body>
